src/app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  background: #11191f;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom,
      transparent,
      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

main {
  margin-top: 120px;
}

.navbar {
  display: flex;
  position: absolute;
  flex-direction: column;
  width: 100%;
  margin: 0;
  right: 0;
  background: #11191f;
  padding: 0;
  transition: All 0.5s ease-in;
  z-index: 1000;
}

#navbar,
ul {
  margin: 2em 6em 0 0;
}

.navbar-brand {
  margin: 3em 0 3em 1em !important;
}

.menu-label {
  margin-left: 4em;
}

.navbar-toggler {
  color: lightgray;
}

.greetings {
  margin-bottom: 2.3em;
}

.btn-custom {
  border: none;
  border-radius: 14px;
  background-image: linear-gradient(to right, #2a6dac, #112d46);
  cursor: pointer;
  display: inline-block;
  width: 206px;
  height: 43px;
  transition: background-color 0.3s;
}

.btn-custom:hover {
  background-image: linear-gradient(to right, #007bff, #004f9f);
}

.gradient-paragraph {
  background: linear-gradient(to left, #00ccd9, #e9eaea);
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  -webkit-text-fill-color: transparent;
  display: inline-block;
}

a {
  text-decoration: none;
}

.letter-spacing {
  letter-spacing: 0.05em;
}

footer .row {
  display: flex;
  align-items: center;
}

footer a {
  color: #b4b2b2f1;
  text-decoration: none;
}

footer a:hover {
  color: #62dbe9;
}

form {
  max-width: 575px;
  margin: auto;
}

.form-container,
.footer-main-container {
  max-width: 100vw;
  margin: auto;
  padding: 15px;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

